gcc/testsuite/g++.dg/init/array44.C
int a[] = { };  // { dg-error "5:zero-size array" } 
